# owllang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
compiler/: README.md  pyproject.toml
compiler/docs/: CYCLE_REVIEW.md  INVARIANTS.md  PERFORMANCE.md
compiler/owl/: README.md  __init__.py  __main__.py  ast_nodes.py  lexer.py  parser.py  transpiler.py
compiler/scripts/: profile_all.py  profile_detailed.py
compiler/src/owllang/: __init__.py  __main__.py  cli.py
compiler/src/owllang/ast/: __init__.py  nodes.py
compiler/src/owllang/diagnostics/: __init__.py  codes.py  error.py  printer.py  span.py  warning.py
compiler/src/owllang/lexer/: __init__.py  lexer.py
compiler/src/owllang/parser/: __init__.py  parser.py
compiler/src/owllang/transpiler/: __init__.py  transpiler.py
compiler/src/owllang/typechecker/: __init__.py  builtins.py  checker.py  types.py
compiler/tests/: conftest.py  hello.owl  hello.py  spec_example.ow  test_cli_ux.py  test_compiler.py  test_diagnostics.py  test_examples.py  test_integration.py  test_invariants.py  test_lexer.py  test_parser.py  test_robustness.py  test_semantic_consistency.py  test_semantic_lock.py  test_stability_contract.py  test_transpiler.py  test_typechecker.py  test_v020_features.py  test_v021_features.py  test_v022_features.py  test_v023_features.py  test_v0247_features.py  test_v024_features.py  test_warnings.py
compiler/tests/examples/: test_warnings.ow
docs/: ARCHITECTURE.md  COMPILER.md  INVARIANTS.md  LANGUAGE.md  NOT_IMPLEMENTED.md  PHILOSOPHY.md  ROADMAP.md  STABILITY.md  SYNTAX.md
docs/_archive/: COMPARISON.md  PHILOSOPHY.md  TRANSPILATION.md
examples/: 00_hello_world.ow  01_hello_world.owl  02_functions.py  02_variables.ow  03_functions.ow  03_functions.owl  04_if_expression.ow  05_option.ow  05_python_interop.owl  06_rest_api_client.owl  06_result.ow  06_type_errors.ow  07_python_import.ow  07_try_operator.ow  08_match.ow  08_try_operator.py  09_lists.ow  09_match_option.py  09_while_loop.ow  10_match_result.ow  10_match_result.py  11_multiline_comments.ow  12_for_in_loop.ow  12_loop_range.ow  13_break_continue.ow  14_python_interop.ow  15_any_boundary.ow  README.md
examples/_future/: 04_classes.ow
spec/: GRAMMAR.ebnf
